fix(a11y): use rems for vertical spacing

--- a/src/sweetalert2.scss
+++ b/src/sweetalert2.scss
@@ -295,7 +295,6 @@ body {
   .swal2-actions {
     align-items: center;
     justify-content: center;
-    margin-top: 15px;
 
     &:not(.swal2-loading) {
       .swal2-styled {
@@ -367,7 +366,7 @@ body {
   }
 
   .swal2-image {
-    margin: 20px auto;
+    margin: 1.25rem auto;
     max-width: 100%;
   }
 
@@ -425,7 +424,7 @@ body {
   .swal2-select,
   .swal2-radio,
   .swal2-checkbox {
-    margin: 20px auto;
+    margin: 1.25rem auto;
   }
 
   .swal2-input,
@@ -471,7 +470,7 @@ body {
     output {
       height: 2.625rem;
       line-height: 2.625rem;
-      margin: 20px auto;
+      margin: 1.25rem auto;
       padding: 0;
     }
   }
@@ -572,7 +571,7 @@ body {
   height: 80px;
   border: 4px solid transparent;
   border-radius: 50%;
-  margin: 20px auto 30px;
+  margin: 1.25rem auto 1.875rem;
   padding: 0;
   position: relative;
   box-sizing: content-box;
